kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: production-ingress
  namespace: production

  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: production-cert
    networking.gke.io/v1beta1.FrontendConfig: https-redirect

spec:
  rules:

  - host: app.example.com

    http:
      paths:

      - path: /webapp-a
        pathType: Prefix
        backend:
          service:
            name: webapp-a-service
            port:
              number: 80

      - path: /webapp-b
        pathType: Prefix
        backend:
          service:
            name: webapp-b-service
            port:
              number: 80
